# meson-wraps

./: Dockerfile  README.md  build.bash  build.sh
patches/glib-2.63.2/: meson.build  meson_options.txt  upstream.wrap
patches/glib-2.63.2/glib/: meson.build
patches/imgui-1.77/: meson.build  upstream.wrap
patches/implot-0.3/: meson.build  upstream.wrap
patches/json-3.5.0/: meson.build  upstream.wrap
patches/openblas-dll-0.3.7/: meson.build  upstream.wrap
patches/openblas-mingw-dlls-0.2.12/: meson.build  upstream.wrap
patches/pybind11-2.2.4/: meson.build  upstream.wrap
patches/pybind11-2.4.3/: meson.build  upstream.wrap
patches/pystring-1.1.3/: meson.build  upstream.wrap
patches/xtensor-0.20.4/: meson.build  meson_options.txt  upstream.wrap
patches/xtensor-0.21.4/: meson.build  upstream.wrap
patches/xtensor-0.21.5/: meson.build  meson_options.txt  upstream.wrap
patches/xtensor-blas-0.16.1/: meson.build  upstream.wrap
patches/xtensor-blas-0.17.2/: meson.build  upstream.wrap
patches/xtensor-julia-0.8.2/: meson.build  upstream.wrap
patches/xtensor-python-0.23.0/: meson.build  upstream.wrap
patches/xtensor-python-0.24.1/: meson.build  upstream.wrap
patches/xtl-0.6.12/: meson.build  upstream.wrap
patches/xtl-0.6.3/: meson.build  upstream.wrap
wraps/: glib.wrap  openblas-dll.wrap  openblas-mingw-dlls.wrap  pybind11.wrap  pystring.wrap  xtensor-blas.wrap  xtensor-julia.wrap  xtensor-python.wrap  xtensor.wrap  xtl.wrap
wraps/dearimgui-v1.77/: dearimgui.wrap
wraps/implot-v0.3/: implot.wrap
wraps/json-3.5.0/: nlohmann_json.wrap
wraps/openblas-dll-0.3.7/: openblas-dll.wrap
wraps/openblas-mingw-dlls-0.2.12/: openblas-mingw-dlls.wrap
wraps/pybind11-2.2.4/: pybind11.wrap
wraps/pybind11-2.4.3/: pybind11.wrap
wraps/pystring-1.1.3/: pystring.wrap
wraps/xtensor-0.20.4/: xtensor.wrap
wraps/xtensor-0.21.4/: xtensor.wrap
wraps/xtensor-0.21.5/: xtensor.wrap
wraps/xtensor-blas-0.16.1/: xtensor-blas.wrap
wraps/xtensor-blas-0.17.2/: xtensor-blas.wrap
wraps/xtensor-julia-0.8.2/: xtensor-julia.wrap
wraps/xtensor-python-0.23.0/: xtensor-python.wrap
wraps/xtensor-python-0.24.1/: xtensor-python.wrap
wraps/xtl-0.6.12/: xtl.wrap
wraps/xtl-0.6.3/: xtl.wrap
xtl-0.6.3/: meson.build
